[package]
name = "rss_client"
version = "0.1.0"
authors = ["GrSpirit <gr.spirit@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["hyper, tokio, rss, xml"]
repository = "https://github.com/GrSpirit/rss_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
serde-xml-rs = "0.4"
serde = "1.0"
serde_derive = "1.0"
bytes = "0.5"
